--- a/app/src/main/res/layout/activity_detailed_prediction.xml
+++ b/app/src/main/res/layout/activity_detailed_prediction.xml
@@ -50,7 +50,7 @@
                     android:id="@+id/textViewFinalScoreTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Final Score"
+                    android:text="Predicted Final Grade"
                     android:textSize="18sp"
                     android:textStyle="bold"/>
 
@@ -77,7 +77,7 @@
                     android:id="@+id/textViewRequiredExamScoreTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Required Final Exam Score"
+                    android:text="Predicted Final Exam Score"
                     android:textSize="18sp"
                     android:textStyle="normal"/>
             </androidx.cardview.widget.CardView>
