created new lecturer message and settings

--- a/app/src/main/res/layout/activity_dashboard_page.xml
+++ b/app/src/main/res/layout/activity_dashboard_page.xml
@@ -353,7 +353,7 @@
                     android:id="@+id/image_view23"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/help"
+                    android:src="@drawable/mail_24px"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -365,7 +365,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Help"
+                    android:text="Lecturer Message"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold"
