--- a/app/src/main/res/layout/activity_delete_course.xml
+++ b/app/src/main/res/layout/activity_delete_course.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".DeleteCourseActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -11,15 +13,27 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/GreenTrash"
         android:elevation="4dp"
-        app:title="Lecturer Message"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/arrowback"
-        app:titleTextColor="@android:color/white"  />
+        app:titleTextColor="@android:color/white"
+        app:title="Course Mnanagement"/>
+
+    <TextView
+        android:id="@+id/noCoursesTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:text="No courses to display"
+        android:textSize="18sp"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:padding="8dp"
+        tools:listitem="@layout/item_course" />
 
 </LinearLayout>
